[package]
name = "nft-metadata-crawler-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
csv = { workspace = true }
diesel = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
